# heel_toe_planner

./: CMakeLists.txt  package.xml
gazebo/control/: reemc_control.launch~  rrbot_control.launch~  rrbot_control.yaml
gazebo/launch/: reemc_gazebo.launch  reemc_gazebo.launch~
include/heel_toe_planner/: Controller.h  IK.h  IK_Solver.h  Three_Mass.h  ZMP_Callback.h  ZMP_Tracking.h
include/heel_toe_planner/COM_Generation/: COM_Boundary_Condition.h  COM_Generation.h  COM_Generation_All.h  Cosine_Cosine_Interpolation.h  Forward_Kinematic.h  Gait_Generation.h  Heel_Toe_Planner_Part1_emxAPI.h  Heel_Toe_Planner_Part1_emxutil.h  Heel_Toe_Planner_Part1_initialize.h  Heel_Toe_Planner_Part1_rtwutil.h  Heel_Toe_Planner_Part1_terminate.h  Heel_Toe_Planner_Part1_types.h  Quadratic_Cosine_Interpolation.h  X_DS_Differential_Equa_Solver.h  X_SS_Differential_Equa_Solver.h  Y_Correction.h  Y_DS_Differential_Equa_Solver.h  Y_End.h  Y_SS_Differential_Equa_Solver.h  ZMP_Boundary_Condition.h  ZMP_END_FITTING.h  ZMP_Generation.h  fileManager.h  fprintf.h  mldivide.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
include/heel_toe_planner/COM_Generation/Ipopt_Solver/: NLP_Interface.hpp  Nonlinear_Eqn_Solver1.hpp  Nonlinear_Eqn_Solver2.hpp  Nonlinear_Eqn_Solver3.hpp
launch/: kinematic_model.launch~  upload_reemc_simplified.launch  upload_reemc_simplified.launch~
msg/: ZMPCoordinate.msg
reemc_description_simplified/: CMakeLists.txt  package.xml
reemc_description_simplified/robots/: reemc_full.urdf.xacro~  reemc_full_ft_hey5.urdf.xacro~  reemc_lower_body.urdf.xacro~
reemc_description_simplified/urdf/leg/: leg.urdf.xacro
src/: Controller.cpp  IK_Solver.cpp  Three_Mass.cpp  ZMP_Callback.cpp  ZMP_Tracking.cpp  heel_toe_planner_complete.cpp
src/COM_Generation/: COM_Boundary_Condition.c  COM_Generation.c  COM_Generation_All.cpp  Cosine_Cosine_Interpolation.c  Forward_Kinematic.c  Gait_Generation.c  Heel_Toe_Planner_Part1_emxAPI.c  Heel_Toe_Planner_Part1_emxutil.c  Heel_Toe_Planner_Part1_initialize.c  Heel_Toe_Planner_Part1_rtwutil.c  Heel_Toe_Planner_Part1_terminate.c  Quadratic_Cosine_Interpolation.c  X_DS_Differential_Equa_Solver.c  X_SS_Differential_Equa_Solver.c  Y_Correction.c  Y_DS_Differential_Equa_Solver.c  Y_End.c  Y_SS_Differential_Equa_Solver.c  ZMP_Boundary_Condition.c  ZMP_END_FITTING.c  ZMP_Generation.c  fileManager.c  fprintf.c  mldivide.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
src/COM_Generation/Ipopt_Solver/: NLP_Interface.cpp  Nonlinear_Eqn_Solver1.cpp  Nonlinear_Eqn_Solver2.cpp  Nonlinear_Eqn_Solver3.cpp
src/test/: Test_COM_Generation.cpp  Test_Controller.cpp  Test_Solver.cpp  Test_ZMP_Tracking.cpp  demo.cpp
