<?xml version="1.0"?>
<package>
  <name>heel_toe_planner</name>
  <version>0.1.0</version>
  <description>The heel_toe_planner package</description>

  <maintainer email="kaiyifu2@illinois.edu">viki</maintainer>



  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rbdl</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pal_robot_tools</build_depend>
  <build_depend>pal_multicontact_planner</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rbdl</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pal_robot_tools</run_depend>
  <run_depend>pal_multicontact_planner</run_depend>
  <run_depend>cmake_modules</run_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
