<?xml version="1.0"?>
<package>
  <name>heel_toe_planner</name>
  <version>0.1.0</version>
  <description>The heel_toe_planner package</description>

  <maintainer email="kaiyifu2@illinois.edu">viki</maintainer>



  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rbdl</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pal_robot_tools</build_depend>
  <build_depend>pal_multicontact_planner</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rbdl</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pal_robot_tools</run_depend>
  <run_depend>pal_multicontact_planner</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo7</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
